tests/paczka2/big_fuzzy/27890603.err
Error in line 3: uvk12wfm6 A606 42,1
Error in line 28: A579 A902 43,31
Error in line 20: A579 A606 63,9
Error in line 36: WYFN A606 35,0
Error in line 43: 5CR8uCrvu4 S696 97,7
Error in line 39: A579 A902 134,0
Error in line 53: A579 A606 20,7
Error in line 68: V53OFHVcQ9a A579 26,9
Error in line 71: V53OFHVcQ9a S696 78,7
Error in line 77: 5CR8uCrvu4 A579 96,1
Error in line 82: 5CR8uCrvu4 A606 81,7
Error in line 83: uvk12wfm6 S696 93,4
Error in line 91: V53OFHVcQ9a S696 51,3
Error in line 106: V53OFHVcQ9a A902 3,6
Error in line 105: uvk12wfm6 A606 57,3
Error in line 104: A579 A902 29,9
Error in line 96: LGWKlAB9M7V A902 101,9
Error in line 131: V53OFHVcQ9a A902 40,4
Error in line 147: 5CR8uCrvu4 A606 18,3
Error in line 142: V53OFHVcQ9a A579 91,3
Error in line 162: A579 A902 316,2
Error in line 176: 0udvc2JIX A606 112,4
Error in line 181: LGWKlAB9M7V A606 193,3
Error in line 184: LGWKlAB9M7V A579 73,2
Error in line 186: 0udvc2JIX A902 10,3
Error in line 190: LGWKlAB9M7V S696 74,1
Error in line 193: uvk12wfm6 A606 46,3
Error in line 218: 0udvc2JIX S696 66,9
Error in line 222: Pudvc2JIX A9P2 68,P
Error in line 230: 0udvc2JIX A902 113,6
Error in line 226: A579 A606 27,3
Error in line 238: A579 A606 39,3
Error in line 240: A579 A579 5,5
Error in line 244: A579 S696 97,9
Error in line 243: WYFN S696 3,0
Error in line 205: LGWKlAB9M7V A579 38,6
